finally migrate to java 9